<resources>
    <string name="app_name">SmartGlove</string>

    <string name="device_label">Device:</string>
    <string name="status_label">Status:</string>

    <string name="scan_button">Scan for Device</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>



    <string name="left_glove">Left Glove</string>
    <string name="right_glove">Right Glove</string>
    <string name="left_sock">Left Sock</string>
    <string name="right_sock">Right Sock</string>
    <string name="device_address_label">Device Address:</string>
    <string name="device_name_label">Device Name:</string>
    <string name="select">Select Device</string>
    <string name="cancel">Cancel</string>
</resources>
